// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto.icon;

message LoopbackConfig {
  // Number of degrees of freedom. Defaults to 6 if not specified.
  optional int32 num_dof = 1;
}
